--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.organization=opengov
-sonar.projectKey=OpenGov_simple-java-project
+sonar.projectKey=openGov
 sonar.sources=src/
 sonar.java.binaries=.
 sonar.verbose=true
