--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=demo-scan
-sonar.projectKey=demo-scan
+sonar.organization=opengov
+sonar.projectKey=Data-Platform
 sonar.sources=src/
 sonar.java.binaries=.
 sonar.verbose=true
