--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
     <artifactId>works-with-heroku</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
+    <repository>
+    <id>udz1kor</id>
+    <url>https://pkgs.dev.azure.com/udz1kor/_packaging/udz1kor/maven/v1</url>
+    <releases>
+    <enabled>true</enabled>
+    </releases>
+    <snapshots>
+    <enabled>true</enabled>
+    </snapshots>
+    </repository>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
