--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <packaging>war</packaging>
     <distributionManagement>
     <repository>
-  <id>udz1kor</id>
-  <url>https://pkgs.dev.azure.com/udz1kor/_packaging/udz1kor/maven/v1</url>
+     <id>artifacts</id>
+     <url>https://pkgs.dev.azure.com/udz1kor/azurepipelinestest/_packaging/artifacts/maven/v1</url>
   <releases>
     <enabled>true</enabled>
   </releases>
